Add nonroot Java images
Signed-off-by: Pierangelo Di Pilato <pierangelodipilato@gmail.com>

--- a/java/BUILD
+++ b/java/BUILD
@@ -14,10 +14,25 @@ DISTRO_VERSIONS = {
     "_debian10": versions_amd64_debian10,
 }
 
+USERS = [
+    (
+        "",
+        "_root",
+        "0",
+        "/",
+    ),
+    (
+        "_nonroot",
+        "_nonroot",
+        "1002",
+        "/home/nonroot",
+    ),
+]
+
 [
     container_image(
-        name = "java_base" + mode + distro_suffix,
-        base = ("//cc:cc" if (not ("debug" in mode)) else "//cc:debug") + "_root_amd64" + distro_suffix,
+        name = "java_base" + mode + name + distro_suffix,
+        base = ("//cc:cc" if (not ("debug" in mode)) else "//cc:debug") + user + "_amd64" + distro_suffix,
         debs = [
             DISTRO_PACKAGES["amd64"][distro_suffix]["zlib1g"],
             DISTRO_PACKAGES["amd64"][distro_suffix]["libjpeg62-turbo"],
@@ -37,83 +52,92 @@ DISTRO_VERSIONS = {
             "//cacerts:cacerts_java_amd64" + distro_suffix,
             "//locale:locale_amd64" + distro_suffix,
         ],
+        user = user,
+        workdir = workdir,
     )
     for mode in [
         "",
         "_debug",
     ]
+    for (name, user, uid, workdir) in USERS
     for distro_suffix in DISTRO_SUFFIXES
 ]
 
-[container_image(
-    name = rule_name + distro_suffix,
-    base = ":java_base" + ("_debug" if ("debug" in rule_name) else "") + distro_suffix,
-    debs = [DISTRO_PACKAGES["amd64"][distro_suffix][deb] for deb in java_debs],
-    # We expect users to use:
-    # cmd = ["/path/to/deploy.jar", "--option1", ...]
-    entrypoint = [
-        "/usr/bin/java",
-        "-jar",
-    ],
-    env = {
-        "JAVA_VERSION": jre_ver(DISTRO_VERSIONS[distro_suffix][java_debs[0]]),
-    },
-    symlinks = {
-        "/usr/bin/java": java_executable_path,
-    },
-) for (distro_suffix, rule_name, java_debs, java_executable_path) in [
-    (
-        "_debian9",
-        "java8",
-        ["openjdk-8-jre-headless"],
-        "/usr/lib/jvm/java-8-openjdk-amd64/jre/bin/java",
-    ),
-    (
-        "_debian9",
-        "java8_debug",
-        [
-            "openjdk-8-jre-headless",
-            "openjdk-8-jdk-headless",
+[
+    container_image(
+        name = rule_name + name + distro_suffix,
+        base = ":java_base" + ("_debug" if ("debug" in rule_name) else "") + name + distro_suffix,
+        debs = [DISTRO_PACKAGES["amd64"][distro_suffix][deb] for deb in java_debs],
+        # We expect users to use:
+        # cmd = ["/path/to/deploy.jar", "--option1", ...]
+        entrypoint = [
+            "/usr/bin/java",
+            "-jar",
         ],
-        "/usr/lib/jvm/java-8-openjdk-amd64/jre/bin/java",
-    ),
-    (
-        "_debian9",
-        "java11",
-        ["openjdk-11-jre-headless"],
-        "/usr/lib/jvm/java-11-openjdk-amd64/bin/java",
-    ),
-    (
-        "_debian9",
-        "java11_debug",
-        [
-            "openjdk-11-jre-headless",
-            "openjdk-11-jdk-headless",
-        ],
-        "/usr/lib/jvm/java-11-openjdk-amd64/bin/java",
-    ),
-    (
-        "_debian10",
-        "java11",
-        ["openjdk-11-jre-headless"],
-        "/usr/lib/jvm/java-11-openjdk-amd64/bin/java",
-    ),
-    (
-        "_debian10",
-        "java11_debug",
-        [
-            "openjdk-11-jre-headless",
-            "openjdk-11-jdk-headless",
-        ],
-        "/usr/lib/jvm/java-11-openjdk-amd64/bin/java",
-    ),
-]]
+        env = {
+            "JAVA_VERSION": jre_ver(DISTRO_VERSIONS[distro_suffix][java_debs[0]]),
+        },
+        symlinks = {
+            "/usr/bin/java": java_executable_path,
+        },
+        user = user,
+        workdir = workdir,
+    )
+    for (distro_suffix, rule_name, java_debs, java_executable_path) in [
+        (
+            "_debian9",
+            "java8",
+            ["openjdk-8-jre-headless"],
+            "/usr/lib/jvm/java-8-openjdk-amd64/jre/bin/java",
+        ),
+        (
+            "_debian9",
+            "java8_debug",
+            [
+                "openjdk-8-jre-headless",
+                "openjdk-8-jdk-headless",
+            ],
+            "/usr/lib/jvm/java-8-openjdk-amd64/jre/bin/java",
+        ),
+        (
+            "_debian9",
+            "java11",
+            ["openjdk-11-jre-headless"],
+            "/usr/lib/jvm/java-11-openjdk-amd64/bin/java",
+        ),
+        (
+            "_debian9",
+            "java11_debug",
+            [
+                "openjdk-11-jre-headless",
+                "openjdk-11-jdk-headless",
+            ],
+            "/usr/lib/jvm/java-11-openjdk-amd64/bin/java",
+        ),
+        (
+            "_debian10",
+            "java11",
+            ["openjdk-11-jre-headless"],
+            "/usr/lib/jvm/java-11-openjdk-amd64/bin/java",
+        ),
+        (
+            "_debian10",
+            "java11_debug",
+            [
+                "openjdk-11-jre-headless",
+                "openjdk-11-jdk-headless",
+            ],
+            "/usr/lib/jvm/java-11-openjdk-amd64/bin/java",
+        ),
+    ]
+    for (name, user, uid, workdir) in USERS
+]
 
 [
     container_test(
-        name = "java_base" + mode + distro_suffix + "_test",
+        name = "java_base" + mode + name + distro_suffix + "_test",
         configs = ["testdata/java_base" + mode + ".yaml"],
-        image = ":java_base" + mode + distro_suffix,
+        image = ":java_base" + mode + name + distro_suffix,
         tags = [
             "amd64",
             "manual",
@@ -123,48 +147,63 @@ DISTRO_VERSIONS = {
         "",
         "_debug",
     ]
+    for (name, user, uid, workdir) in USERS
     for distro_suffix in DISTRO_SUFFIXES
 ]
 
-container_test(
-    name = "java8_debian9_test",
-    configs = ["testdata/java8.yaml"],
-    image = ":java8_debian9",
-    tags = [
-        "amd64",
-        "manual",
-    ],
-)
+[
+    container_test(
+        name = "java8_debian9" + name + "_test",
+        configs = ["testdata/java8.yaml"],
+        image = ":java8" + name + "_debian9",
+        tags = [
+            "amd64",
+            "manual",
+        ],
+    )
+    for (name, user, uid, workdir) in USERS
+]
 
-container_test(
-    name = "java8_debug_debian9_test",
-    configs = ["testdata/java8_debug.yaml"],
-    image = ":java8_debug_debian9",
-    tags = [
-        "amd64",
-        "manual",
-    ],
-)
+[
+    container_test(
+        name = "java8_debug" + name + "_debian9_test",
+        configs = ["testdata/java8_debug.yaml"],
+        image = ":java8_debug" + name + "_debian9",
+        tags = [
+            "amd64",
+            "manual",
+        ],
+    )
+    for (name, user, uid, workdir) in USERS
+]
 
-[container_test(
-    name = "java11" + distro_suffix + "_test",
-    configs = ["testdata/java11" + distro_suffix + ".yaml"],
-    image = ":java11" + distro_suffix,
-    tags = [
-        "amd64",
-        "manual",
-    ],
-) for distro_suffix in DISTRO_SUFFIXES]
+[
+    container_test(
+        name = "java11" + name + distro_suffix + "_test",
+        configs = ["testdata/java11" + distro_suffix + ".yaml"],
+        image = ":java11" + name + distro_suffix,
+        tags = [
+            "amd64",
+            "manual",
+        ],
+    )
+    for (name, user, uid, workdir) in USERS
+    for distro_suffix in DISTRO_SUFFIXES
+]
 
-[container_test(
-    name = "java11_debug" + distro_suffix + "_test",
-    configs = ["testdata/java11_debug" + distro_suffix + ".yaml"],
-    image = ":java11_debug" + distro_suffix,
-    tags = [
-        "amd64",
-        "manual",
-    ],
-) for distro_suffix in DISTRO_SUFFIXES]
+[
+    container_test(
+        name = "java11_debug" + name + distro_suffix + "_test",
+        configs = ["testdata/java11_debug" + distro_suffix + ".yaml"],
+        image = ":java11_debug" + name + distro_suffix,
+        tags = [
+            "amd64",
+            "manual",
+        ],
+    )
+    for (name, user, uid, workdir) in USERS
+    for distro_suffix in DISTRO_SUFFIXES
+]
 
 RULE_NAMES = ("java8_debian9", "java11_debian9", "java11_debian10")
 
