Revert "Build s390x distroless base and static images (#612)"
This reverts commit 40976b8b65aec783a7571ad20d7b1fa0cd12c69e.

--- a/cc/BUILD
+++ b/cc/BUILD
@@ -2,7 +2,7 @@ package(default_visibility = ["//visibility:public"])
 
 load("//base:distro.bzl", "DISTRO_PACKAGES", "DISTRO_SUFFIXES")
 load("@io_bazel_rules_docker//container:container.bzl", "container_image")
-load("//:checksums.bzl", ARCHITECTURES = "BASE_ARCHITECTURES")
+load("//:checksums.bzl", "ARCHITECTURES")
 
 # An image for C/C++ programs
 [
